agregando estilos de los elementos

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     </head>
     <body>
         <div class="flex column centerJustify centerAligitems">
-            <h2>Bienvenido a TESTING API NETWORK-RIM-UG</h2>
-            <p>
+            <h2 class="text" >¡Bienvenido a TESTING API NETWORK-RIM-UG!</h2>
+            <p class="text" id="descripcion" >
                 En este landing page podras testear con una url de la imagen de banano el grado de madurez de la misma, utilizando
                 el api network-rimg-ug, el cual es un proyecto de titulacion para la Universidad de Guayaquil para la carrera de
                 Ingenieria en sistemas.
@@ -16,7 +16,7 @@
                 <button>Consultar</button>
             </div>
             <section id="grado" >
-                <p>0</p>
+                <p>-1</p>
             </section>
         </div>  
     </body>
