agregando request del api y renderizando respuesta

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
                 Ingenieria en sistemas.
             </p>
             <div class="flex" id="forms" >
-                <input type="text" placeholder="url imagen" >
-                <button>Consultar</button>
+                <input type="text" id="url" placeholder="url imagen" >
+                <button onclick="onConsultarApi()" >Consultar</button>
             </div>
             <section id="grado" >
-                <p>-1</p>
+                <p id="madurez" >-1</p>
             </section>
         </div>  
+        <script src="index.js" ></script>
     </body>
 </html>
