--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
+         <div id="spinner"  style="display: none;"  >
+            <div class="animacionSpinner" ></div>
+        </div>
         <div class="flex column centerJustify centerAligitems">
             <h2 class="text" >¡Bienvenido a TESTING API NETWORK-RIM-UG!</h2>
             <p class="text" id="descripcion" >
@@ -19,6 +22,7 @@
                 <p id="madurez" >-1</p>
             </section>
         </div>  
+       
         <script src="index.js" ></script>
     </body>
 </html>
